--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ html, body {
 canvas {
   display: block;
 }
+body{
+  width: max-content !important;
+  margin: 0 auto !important;
+}
 /*https://w3bits.com/prevent-chrome-pull-to-refresh-css*/
 body, .wrapper {
   position: absolute;
